crates/synthonyx-kit-core/tests/compile-fail/pii_display.stderr
error[E0277]: `Pii<String, Personal>` doesn't implement `std::fmt::Display`
 --> tests/compile-fail/pii_display.rs:8:27
  |
8 |     let _ = format!("{}", p);
  |                      --   ^ `Pii<String, Personal>` cannot be formatted with the default formatter
  |                      |
  |                      required by this formatting parameter
  |
  = help: the trait `std::fmt::Display` is not implemented for `Pii<String, Personal>`
  = note: in format strings you may be able to use `{:?}` (or {:#?} for pretty-print) instead
